# PEA_PROJ_3

./: CMakeLists.txt  README.md  main.cpp
GENETIC_ALGORITHM/: GeneticAlgorithm.cpp  GeneticAlgorithm.h
GENETIC_ALGORITHM/GENETIC_PATH/: GeneticPath.cpp  GeneticPath.h
MENU/: Menu.cpp  Menu.h
PEA_UTILS/: PeaUtils.cpp  PeaUtils.h
Python/: BEST_TS.txt_LOGS
Python/10k/: OX_10000_ftv47_2024_1_24_16_47_32.txt  OX_10000_rbg403_2024_1_24_17_3_33.txt  PATH_OX_10000_rbg403_2024_1_24_17_3_33.txt  PATH_PMX_10000_ftv170_2024_1_24_16_57_32.txt
Python/170_ox_1000/: OX_1000_ftv170_2024_1_24_12_33_25.txt  OX_1000_ftv170_2024_1_24_12_37_25.txt  PATH_OX_1000_ftv170_2024_1_24_12_21_25.txt  PATH_OX_1000_ftv170_2024_1_24_12_25_25.txt  PATH_OX_1000_ftv170_2024_1_24_12_29_25.txt
Python/170_ox_200/: OX_200_ftv170_2024_1_24_8_21_21.txt  OX_200_ftv170_2024_1_24_8_33_22.txt  OX_200_ftv170_2024_1_24_8_37_22.txt  PATH_OX_200_ftv170_2024_1_24_8_29_22.txt  PATH_OX_200_ftv170_2024_1_24_8_33_22.txt
Python/170_ox_500/: OX_500_ftv170_2024_1_24_10_21_23.txt  OX_500_ftv170_2024_1_24_10_29_23.txt  PATH_OX_500_ftv170_2024_1_24_10_25_23.txt  PATH_OX_500_ftv170_2024_1_24_10_29_23.txt  PATH_OX_500_ftv170_2024_1_24_10_37_24.txt
Python/170_pmx_1000/: PATH_PMX_1000_ftv170_2024_1_24_12_49_26.txt  PMX_1000_ftv170_2024_1_24_12_45_25.txt  PMX_1000_ftv170_2024_1_24_12_49_26.txt  PMX_1000_ftv170_2024_1_24_12_57_26.txt
Python/170_pmx_200/: PATH_PMX_200_ftv170_2024_1_24_8_41_22.txt  (+2 more)
SHORTEST_PATH_RESULTS/: ShortestPathResults.cpp  ShortestPathResults.h
TSP_MATRIX/: TspMatrix.cpp  TspMatrix.h
(+167 files in other folders)
